yaml/03-cronjob/ingress/sm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-ingress
  namespace: subsmanager
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sm-frontend
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: sm-user
                port:
                  number: 80
          - path: /sub
            pathType: Prefix
            backend:
              service:
                name: sm-subs
                port:
                  number: 80
          - path: /recommend
            pathType: Prefix
            backend:
              service:
                name: sm-reco
                port:
                  number: 80
